Fixing footer on tablet

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -879,7 +879,6 @@ section.dos {
   padding-bottom: 7.5rem;
   margin-right: 10rem;
   margin-bottom: 0;
-  border: 1px solid red;
 }
 
 section.dos .iteration-title {
@@ -901,7 +900,6 @@ section.tres {
   padding-bottom: 7.5rem;
   margin-right: 10rem;
   margin-bottom: 0;
-  border: 1px solid red;
 }
 
 section.tres .iteration-title {
@@ -1034,17 +1032,17 @@ div.key-learnings .concl-sub {
   height: 100%;
 }
 
-.contact-box .contact-image img {
-  width: 50%;
+div.contact-image img.contact-graphic{
+  width: 35%;
   position: relative;
-  top: 1rem;
+  top: -3rem;
   z-index: 1;
 }
 
 .contact-copy  {
   text-align: center;
   position: relative;
-  top: -7rem;
+  top: -2rem;
   z-index: 1000;
 }
 
@@ -1063,7 +1061,7 @@ h5.contact-text {
   line-height: 120%;
   padding-bottom: 1rem;
   margin: 0 auto;
-  width: 80%;
+  width: 85%;
   color: #FFA856;
 }
 
@@ -1072,7 +1070,7 @@ h5.contact-text {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  margin: 0 auto 3rem auto;
+  margin: 3rem auto 10rem auto;
 }
 
 .get-in-touch, .download-resume {
@@ -1092,14 +1090,17 @@ h5.contact-text {
 
 #footer-box {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 0 auto;
   align-items: center;
+  padding: 0;
 }
 
 .social-media {
   display: flex;
-  justify-content: flex-end;
-  padding-right: 10rem;
+  margin-left: 6rem;
+  margin: 0;
 }
 
 .social-media p {
@@ -1107,6 +1108,7 @@ h5.contact-text {
   align-items: center;
   flex-direction: row;
   padding: 0 1rem;
+  margin-left: -2rem;
   font-size: 1.8rem;
   font-family: 'Futura Bold', inherit;
 }
@@ -1117,21 +1119,11 @@ h5.contact-text {
   color: #001F40;
 }
 
-.social-media i:hover {
-  color: #FFFDFB;
-}
-
-.social-media p:hover {
-  color: #FFFDFB;
-  cursor: pointer;
-}
-
 .copyright p {
   text-align: left;
   align-items: center;
   font-size: 1.8rem;
   padding-left: 10rem;
-  padding-top: 3rem;
   font-family: 'Futura Bold', inherit;
 }
 
